--- a/src/components/Sidebar/Style.scss
+++ b/src/components/Sidebar/Style.scss
@@ -1,8 +1,18 @@
 @use "../../assets/scss/" as *;
+
 .side-container {
   border-right: var(--border-color) solid 1px;
   //border: solid black 1px;
   //width: var(--sidebar-width);
   height: calc(100vh - var(--navbar-height));
   align-self: flex-start;
+  @include flex(column, flex-start, center);
+
+  .search {
+
+
+    @include tablet {
+      width: 140px;
+    }
+  }
 }
