--- a/src/components/InputWindow/Style.scss
+++ b/src/components/InputWindow/Style.scss
@@ -1,4 +1,5 @@
 @use "../../assets/scss/" as *;
+
 .input-container {
   // border: 1px solid black;
   // width: calc(100vh - var(--sidebar-width));
@@ -6,6 +7,7 @@
   position: relative;
   height: var(--input-height);
   @include flex(row, center, center);
+
   .input {
     height: 100%;
     font-size: 2rem;
@@ -14,11 +16,13 @@
     border-bottom: 0px;
     border-right: 0px;
   }
+
   .btn-container {
     @include flex(row, center, center);
     margin: 10px;
     position: absolute;
     right: 0;
+
     .btn {
       width: 5rem;
       height: auto;
@@ -27,16 +31,24 @@
       margin: 10px;
       border: 0px;
       background-color: white;
+      @include flex(row, center, center);
+
       .icon {
         font-size: 2.5rem;
         color: #7f81ee;
       }
     }
+
     .btn:hover {
       background-color: rgba(235, 235, 235, 0.63);
     }
+
     .btn:active {
       background-color: rgb(231, 230, 230);
     }
   }
+}
+
+#upload {
+  display: none;
 }
